# ZNS

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: audit.yml  cargo.yml  docker.yml  release.yml
fuzz/: Cargo.toml  cov.sh  flake.nix
fuzz/fuzz_targets/: parser.rs  parser_to_bytes.rs
migrations/2024-03-03-220459_create_records/: down.sql  up.sql
src/: api.rs  auth.rs  authenticate.rs  config.rs  errors.rs  main.rs  message.rs  parser.rs  reader.rs  resolver.rs  schema.rs  sig.rs  structs.rs  utils.rs  worker.rs
src/db/: lib.rs  models.rs
src/handlers/: mod.rs  query.rs
src/handlers/update/: authenticate.rs  dnskey.rs  mod.rs  sig.rs
src/handlers/update/pubkeys/: ed25519.rs  mod.rs  rsa.rs
zns/: Cargo.toml
zns-cli/: Cargo.toml  hier  hier.pub
zns-cli/src/: main.rs
zns-daemon/: Cargo.toml
zns-daemon/migrations/2024-03-03-220459_create_records/: up.sql
zns-daemon/src/: config.rs  main.rs  resolver.rs
zns-daemon/src/auth/: dnskey.rs  mod.rs
zns-daemon/src/auth/pubkeys/: ed25519.rs  mod.rs  rsa.rs
zns-daemon/src/db/: models.rs
zns-daemon/src/handlers/: mod.rs  query.rs  update.rs
zns-daemon/src/handlers/query/: axfr.rs  mod.rs  normal_query.rs
zns-daemon/src/handlers/update/: authenticate.rs  mod.rs  sig.rs
zns-daemon/src/handlers/update/pubkeys/: ed25519.rs  mod.rs  rsa.rs
zns/src/: errors.rs  labelstring.rs  lib.rs  message.rs  parser.rs  reader.rs  resolver.rs  structs.rs  test_utils.rs  utils.rs
zns/src/db/: models.rs
zns/src/handlers/: mod.rs
zns/src/handlers/update/: authenticate.rs  dnskey.rs  sig.rs
zns/src/handlers/update/pubkeys/: mod.rs  rsa.rs
