[package]
name = "zns-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
zns = {path = "../zns", features = ["arbitrary"]}

[[bin]]
name = "parser"
path = "fuzz_targets/parser.rs"
test = false
doc = false
bench = false

[[bin]]
name = "parser_to_bytes"
path = "fuzz_targets/parser_to_bytes.rs"
test = false
doc = false
bench = false
