[package]
name = "zns-daemon"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
tokio = {version = "1.36.0", features = ["macros","rt-multi-thread","net"]}
diesel = { version = "2.1.4", features = ["postgres"] }
dotenvy = "0.15"
ring = "0.17.8"
reqwest = {version = "0.12.4", features = ["json","default"]}
asn1 = "0.16.2"
base64 = "0.22.0"
int-enum = "1.1"


[dependencies.zns]
version = "*"
path = "../zns"

[dev-dependencies]
zns = { path = "../zns", features = ["test-utils"] }
