[package]
name = "zns"
resolver = "2"
version = "0.1.0"
edition = "2021"

[features]
test-utils = []

[dependencies]
base64 = "0.22.0"
int-enum = "1.1"
thiserror = "1.0"
arbitrary = { version = "^1.3.2", optional = true, features = ["derive"] }
rand = {version = "0.8.5"}

[dev-dependencies]
zns = { path = ".", features = ["test-utils"] }

